grammar.js
    script: $ => repeat(choice(
      $.import_declaration,
      $.enum_declaration,
      $.typedef_declaration,
      $.class_declaration,
      $.mixin_declaration,
      $.interface_declaration,
      $.funcdef_declaration,
      $.virtual_property,
      $.variable_declaration,
      $.func_declaration,
      $.namespace_declaration,
      $.using_declaration,
      ";",
    )),

    // =========================================================================
    // IMPORT
    // =========================================================================
    scoped_identifier: $ => seq(
      optional("::"),
      $.identifier,
      repeat(seq("::", $.identifier, optional($.template_type_list))),
    ),

    // =========================================================================
    // NAMESPACE
    // =========================================================================
    class_declaration: $ => seq(
      repeat(field("modifier", $.declaration_modifier)),
      "class",
      field("name", $.identifier),
      choice(
        ";",
        seq(
          optional($.base_class_list),
          field("body", $.class_body),
        ),
      ),
    ),

    class_body: $ => seq(
      "{",
      repeat(choice(
        $.virtual_property,
        $.func_declaration,
        $.variable_declaration,
        $.funcdef_declaration,
        // stray ';' after a member (e.g. `void Foo() {};`) is tolerated by
        // the real compiler, same as at script scope.
        ";",
      )),
      "}",
    ),

    // =========================================================================
    // MIXIN
    // =========================================================================
    func_declaration: $ => prec.dynamic(2, seq(
      repeat(field("modifier", $.shared_external_modifier)),
      optional(choice("private", "protected")),
      optional(
        choice(
          seq(field("return_type", $.type), optional("&")),
          "~",
        ),
      ),
      field("name", $.identifier),
      field("parameters", $.parameter_list),
      optional("const"),
      optional($.func_attributes),
      choice(";", field("body", $.statement_block)),
    )),

    variable_declaration: $ => prec.dynamic(1, seq(
      optional(choice("private", "protected")),
      field("var_type", $.type),
      $.variable_declarator,
      repeat(seq(",", $.variable_declarator)),
      ";",
    )),

    variable_declarator: $ => seq(
      field("name", $.identifier),
      optional(choice(
        seq("=", choice($.initializer_list, $._expression)),
        $.argument_list,
      )),
    ),

    // =========================================================================
    // STATEMENT BLOCK (stub — expanded in Step 3)
    // =========================================================================
    statement_block: $ => seq(
      "{",
      repeat(choice(
        $.variable_declaration,
        $._statement,
        $.using_declaration,
      )),
      "}",
    ),

    _statement: $ => choice(
      $.if_statement,
      $.for_statement,
      $.foreach_statement,
      $.while_statement,
      $.do_while_statement,
      $.switch_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.try_statement,
      $.statement_block,
      $.expression_statement,
      ";",
    ),

    expression_statement: $ => seq(
      $._expression,
      ";",
    ),

    return_statement: $ => seq(
      "return",
      optional(choice($.initializer_list, $._expression)),
      ";",
    ),

    // =========================================================================
    // CONTROL FLOW STATEMENTS
    // =========================================================================

    // prec.right resolves dangling-else: else binds to innermost if
    if_statement: $ => prec.right(seq(
      "if", "(", $._expression, ")",
      field("consequence", $._statement),
      optional(seq("else", field("alternative", $._statement))),
    )),

    parameter_list: $ => seq(
      "(",
      optional(commaSep1($.parameter)),
      ")",
    ),

    type: $ => seq(
      optional("const"),
      optional($.scope),
      $.datatype,
      optional($.template_type_list),
      repeat(choice(
        seq("[", "]"),
        seq("@", optional("const")),
      )),
    ),

    template_type_list: $ => seq(
      $._template_open,
      $.type,
      repeat(seq(",", $.type)),
      $._template_close,
    ),

    // Scope chain for types: :: | ::? NS:: | ::? NS::T<int>::NS2:: ...
    // Reuses scoped_identifier shape (flat greedy) + trailing '::'
    datatype: $ => choice(
      $.identifier,
      $.primitive_type,
      "?",
      "auto",
    ),

    // =========================================================================
    // EXPRESSIONS — Full system with correct operator precedence
    //
    // Precedence table (low to high), per doc_script_precedence.md.
    // Note this deliberately differs from C: bitwise &|^ bind TIGHTER than
    // comparison/equality (avoids C's `a & b == c` gotcha), and xor/^^
    // shares a tier with equality/identity rather than sitting between
    // or and and.
    //   1  = += -= *= /= %= **= |= &= ^= <<= >>= >>>=  (right)
    //   2  ?: ternary                                     (right)
    //   3  || or                                          (left)
    //   4  && and                                         (left)
    //   5  == != is !is xor ^^                             (left)
    //   6  < <= > >=                                      (left)
    //   7  | (bitwise OR)                                 (left)
    //   8  ^ (bitwise XOR)                                (left)
    //   9  & (bitwise AND)                                (left)
    //  10  << >> >>>                                      (left)
    //  11  + - (binary)                                   (left)
    //  12  * / %                                          (left)
    //  13  ** (exponent)                                  (right)
    //  15  unary prefix: - + ! not ~ @ ++ --               (right)
    //  16  postfix: .member [index] () ++ --              (left)
    // =========================================================================
    _expression: $ => choice(
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.functional_cast_expression,
      $.cast_expression,
      $.construct_call_expression,
      $.lambda_expression,
      $.parenthesized_expression,
      $.number_literal,
      $.concatenated_string,
      $.string_literal,
      $.boolean_literal,
      $.null_literal,
      $.this_expression,
      $.scoped_identifier,
    ),

    parenthesized_expression: $ => seq("(", $._expression, ")"),

    // --- Assignment (prec 1, right-associative) ---
    assignment_expression: $ => prec.right(1, seq(
      field("left", $._expression),
      field("operator", choice(
        "=", "+=", "-=", "*=", "/=", "%=", "**=",
        "&=", "|=", "^=", "<<=", ">>=", ">>>=", "@=",
      )),
      // RHS may be brace init list: dict = {{'a', 1}}
      field("right", choice($.initializer_list, $._expression)),
    )),

    // --- Ternary (prec 2, right-associative) ---
    ternary_expression: $ => prec.right(2, seq(
      field("condition", $._expression),
      "?",
      field("consequence", $._expression),
      ":",
      field("alternative", $._expression),
    )),

    // --- Binary operators (prec 3–13) ---
    binary_expression: $ => {
      const table = [
        // prec 3: logical OR
        ["||", 3],
        ["or", 3],
        // prec 4: logical AND
        ["&&", 4],
        ["and", 4],
        // prec 5: equality / identity / logical XOR (same tier in AngelScript)
        ["==", 5],
        ["!=", 5],
        ["is", 5],
        ["!is", 5],
        ["^^", 5],
        ["xor", 5],
        // prec 6: relational
        ["<", 6],
        [">", 6],
        ["<=", 6],
        [">=", 6],
        // prec 7: bitwise OR
        ["|", 7],
        // prec 8: bitwise XOR
        ["^", 8],
        // prec 9: bitwise AND
        ["&", 9],
        // prec 10: shift
        ["<<", 10],
        [">>", 10],
        [">>>", 10],
        // prec 11: additive
        ["+", 11],
        ["-", 11],
        // prec 12: multiplicative
        ["*", 12],
        ["/", 12],
        ["%", 12],
      ];

      return choice(
        ...table.map(([op, precedence]) =>
          prec.left(precedence, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          )),
        ),
        // prec 13: exponentiation (right-associative)
        prec.right(13, seq(
          field("left", $._expression),
          field("operator", "**"),
          field("right", $._expression),
        )),
      );
    },

    // --- Unary prefix (prec 15, right-associative) ---
    // Includes @ (handle-of operator). 'not' is the keyword form of '!'.
    unary_expression: $ => prec.right(15, seq(
      field("operator", choice("-", "+", "!", "not", "~", "@", "++", "--")),
      field("operand", $._expression),
    )),

    // --- Postfix (prec 16, left-associative) ---
    postfix_expression: $ => prec.left(16, seq(
      field("operand", $._expression),
      field("operator", choice("++", "--")),
    )),

    // --- Call expression (prec 16) ---
    // Handles both function calls and constructor calls (e.g. MyType(args)).
    // Constructor vs function distinction is semantic, not syntactic.
    call_expression: $ => prec.left(16, seq(
      field("function", $._expression),
      field("arguments", $.argument_list),
    )),

    // --- Member access (prec 16) ---
    member_expression: $ => prec.left(16, seq(
      field("object", $._expression),
      ".",
      field("member", $.identifier),
    )),

    // --- Index expression with optional named indexing (prec 16) ---
    // Supports: a[0], a[key: value], a[k1: v1, k2: v2]
    index_expression: $ => prec.left(16, seq(
      field("object", $._expression),
      "[",
      commaSep1(seq(
        optional(seq(field("index_name", $.identifier), ":")),
        field("index", $._expression),
      )),
      "]",
    )),

    // --- Cast expression ---
    // Uses external scanner tokens to disambiguate < > from comparison operators
    cast_expression: $ => seq(
      "cast",
      $._template_open,
      field("type", $.type),
      $._template_close,
      "(",
      field("value", $._expression),
      ")",
    ),

    // --- Constructor call with explicit template args: array<int>(args) ---
    // Requires template_type_list so plain Type(args) stays call_expression.
    lambda_expression: $ => seq(
      "function",
      field("parameters", $.lambda_parameter_list),
      field("body", $.statement_block),
    ),

    lambda_parameter_list: $ => seq(
      "(",
      commaSep1(seq(
        optional(seq(
          field("param_type", $.type),
          optional(seq("&", optional(choice("in", "out", "inout")))),
        )),
        optional(field("name", $.identifier)),
      )),
      ")",
    ),

    // =========================================================================
    // INITIALIZER LIST & ARGUMENT LIST
    // =========================================================================
    // initializer_list is NOT in _expression to avoid {}-vs-statement_block
    // ambiguity. It is reachable from variable_declaration and return_statement
    // RHS. Nesting works via choice($.initializer_list, $._expression).
    _initializer_element: $ => choice(
      $.initializer_list,
      $.typed_initializer_list,
      $._expression,
    ),

    initializer_list: $ => seq(
      "{",
      commaSep($._initializer_element),
      optional(","),
      "}",
    ),

    // Anonymous typed list construction used as a value, e.g. a dictionary
    // entry: {"key", array<string> = {"a", "b"}}
    typed_initializer_list: $ => seq(
      field("type", $.type),
      "=",
      field("value", $.initializer_list),
    ),

    // Supports named arguments: foo(arg1: val1, arg2: val2)
    // and brace init lists as arguments: foo({1, 2})
    argument_list: $ => seq(
      "(",
      commaSep(seq(
        optional(seq(field("arg_name", $.identifier), ":")),
        // 'void' argument: func(void) — ignores an output value
        choice($.initializer_list, $.typed_initializer_list, "void", $._expression),
      )),
      ")",
    ),

    // =========================================================================
    // LITERALS
    // =========================================================================
    null_literal: _ => "null",

    this_expression: _ => "this",

    // Adjacent string literals concatenate implicitly: "a" "b" == "ab"
    number_literal: _ => {
      const hex = /0[xX][0-9a-fA-F]+/;
      const octal = /0[oO][0-7]+/;
      const binary = /0[bB][01]+/;
      const explicit_decimal = /0[dD][0-9]+/;
      const decimal_float = choice(
        /[0-9]+\.[0-9]*([eE][+-]?[0-9]+)?[fFdD]?/,
        /[0-9]*\.[0-9]+([eE][+-]?[0-9]+)?[fFdD]?/,
        /[0-9]+[eE][+-]?[0-9]+[fFdD]?/,
        /[0-9]+[fFdD]/,
      );
      const decimal_int = /[0-9]+/;
      return token(choice(hex, octal, binary, explicit_decimal, decimal_float, decimal_int));
    },

    // =========================================================================
    // PRIMITIVES
    // =========================================================================
    primitive_type: _ => choice(
      "void", "int", "int8", "int16", "int32", "int64", "uint",
      "uint8", "uint16", "uint32", "uint64", "float", "double", "bool",
    ),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
