test/corpus/expressions.txt
================================================================================
Binary addition
================================================================================

void f() {
  a + b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Binary multiplication binds tighter than addition
================================================================================

void f() {
  a + b * c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (binary_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier))))))))

================================================================================
Exponentiation operator (right-associative)
================================================================================

void f() {
  a ** b ** c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (binary_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier))))))))

================================================================================
Exponentiation binds tighter than multiplication
================================================================================

void f() {
  a ** b * c + d;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (scoped_identifier
                (identifier))
              right: (scoped_identifier
                (identifier)))
            right: (scoped_identifier
              (identifier)))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Logical XOR operator (^^)
================================================================================

void f() {
  a ^^ b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Keyword logical operators (and, or, xor)
================================================================================

void f() {
  a and b;
  c or d;
  e xor f;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Identity operators (is, !is)
================================================================================

void f() {
  a is b;
  a !is b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Shift operators
================================================================================

void f() {
  a << b;
  a >> b;
  a >>> b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Bitwise operators
================================================================================

void f() {
  a & b;
  a | b;
  a ^ b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Bitwise AND binds tighter than equality (AngelScript, unlike C)
================================================================================

void f() {
  a & b == c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (binary_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier)))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Assignment expression (right-associative)
================================================================================

void f() {
  a = b = c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (assignment_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier))))))))

================================================================================
Compound assignment operators
================================================================================

void f() {
  a += b;
  a -= b;
  a *= b;
  a /= b;
  a %= b;
  a **= b;
  a &= b;
  a |= b;
  a ^= b;
  a <<= b;
  a >>= b;
  a >>>= b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Ternary expression
================================================================================

void f() {
  a ? b : c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (ternary_expression
          condition: (scoped_identifier
            (identifier))
          consequence: (scoped_identifier
            (identifier))
          alternative: (scoped_identifier
            (identifier)))))))

================================================================================
Nested ternary expression (right-associative)
================================================================================

void f() {
  a ? b ? c : d : e;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (ternary_expression
          condition: (scoped_identifier
            (identifier))
          consequence: (ternary_expression
            condition: (scoped_identifier
              (identifier))
            consequence: (scoped_identifier
              (identifier))
            alternative: (scoped_identifier
              (identifier)))
          alternative: (scoped_identifier
            (identifier)))))))

================================================================================
Unary prefix operators
================================================================================

void f() {
  -x;
  +x;
  !flag;
  ~bits;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier))))
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier))))
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier))))
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier)))))))

================================================================================
Keyword form of logical not ('not')
================================================================================

void f() {
  if( a and b or not c ) {}
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (if_statement
        condition: (binary_expression
          left: (binary_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier)))
          right: (unary_expression
            operand: (scoped_identifier
              (identifier))))
        consequence: (statement_block)))))

================================================================================
Handle-of operator (@)
================================================================================

void f() {
  @obj;
  @obj.member;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier))))
      (expression_statement
        (unary_expression
          operand: (member_expression
            object: (scoped_identifier
              (identifier))
            member: (identifier)))))))

================================================================================
Prefix increment/decrement
================================================================================

void f() {
  ++i;
  --i;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier))))
      (expression_statement
        (unary_expression
          operand: (scoped_identifier
            (identifier)))))))

================================================================================
Postfix increment/decrement
================================================================================

void f() {
  x++;
  x--;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (postfix_expression
          operand: (scoped_identifier
            (identifier))))
      (expression_statement
        (postfix_expression
          operand: (scoped_identifier
            (identifier)))))))

================================================================================
Member access
================================================================================

void f() {
  a.b;
  a.b.c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (member_expression
          object: (scoped_identifier
            (identifier))
          member: (identifier)))
      (expression_statement
        (member_expression
          object: (member_expression
            object: (scoped_identifier
              (identifier))
            member: (identifier))
          member: (identifier))))))

================================================================================
Index expression
================================================================================

void f() {
  a[0];
  a[b + c];
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (index_expression
          object: (scoped_identifier
            (identifier))
          index: (number_literal)))
      (expression_statement
        (index_expression
          object: (scoped_identifier
            (identifier))
          index: (binary_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier))))))))

================================================================================
Named indexing
================================================================================

void f() {
  a[key: val];
  a[k1: v1, k2: v2];
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (index_expression
          object: (scoped_identifier
            (identifier))
          index_name: (identifier)
          index: (scoped_identifier
            (identifier))))
      (expression_statement
        (index_expression
          object: (scoped_identifier
            (identifier))
          index_name: (identifier)
          index: (scoped_identifier
            (identifier))
          index_name: (identifier)
          index: (scoped_identifier
            (identifier)))))))

================================================================================
Function call
================================================================================

void f() {
  foo();
  bar(1, 2, 3);
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (call_expression
          function: (scoped_identifier
            (identifier))
          arguments: (argument_list)))
      (expression_statement
        (call_expression
          function: (scoped_identifier
            (identifier))
          arguments: (argument_list
            (number_literal)
            (number_literal)
            (number_literal)))))))

================================================================================
Named arguments
================================================================================

void f() {
  foo(arg1: 1, arg2: 2);
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (call_expression
          function: (scoped_identifier
            (identifier))
          arguments: (argument_list
            arg_name: (identifier)
            (number_literal)
            arg_name: (identifier)
            (number_literal)))))))

================================================================================
Method call
================================================================================

void f() {
  a.foo();
  a.b.bar(1);
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (call_expression
          function: (member_expression
            object: (scoped_identifier
              (identifier))
            member: (identifier))
          arguments: (argument_list)))
      (expression_statement
        (call_expression
          function: (member_expression
            object: (member_expression
              object: (scoped_identifier
                (identifier))
              member: (identifier))
            member: (identifier))
          arguments: (argument_list
            (number_literal)))))))

================================================================================
Cast expression
================================================================================

void f() {
  cast<int>(x);
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (cast_expression
          type: (type
            (datatype
              (primitive_type)))
          value: (scoped_identifier
            (identifier)))))))

================================================================================
Lambda expression (no params)
================================================================================

void f() {
  function() { };
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (lambda_expression
          parameters: (lambda_parameter_list)
          body: (statement_block))))))

================================================================================
Lambda expression with typed params
================================================================================

void f() {
  function(int x, int y) { return x + y; };
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (lambda_expression
          parameters: (lambda_parameter_list
            param_type: (type
              (datatype
                (primitive_type)))
            name: (identifier)
            param_type: (type
              (datatype
                (primitive_type)))
            name: (identifier))
          body: (statement_block
            (return_statement
              value: (binary_expression
                left: (scoped_identifier
                  (identifier))
                right: (scoped_identifier
                  (identifier))))))))))

================================================================================
Lambda as argument
================================================================================

void f() {
  sort(function(int a, int b) { return a < b; });
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (call_expression
          function: (scoped_identifier
            (identifier))
          arguments: (argument_list
            (lambda_expression
              parameters: (lambda_parameter_list
                param_type: (type
                  (datatype
                    (primitive_type)))
                name: (identifier)
                param_type: (type
                  (datatype
                    (primitive_type)))
                name: (identifier))
              body: (statement_block
                (return_statement
                  value: (binary_expression
                    left: (scoped_identifier
                      (identifier))
                    right: (scoped_identifier
                      (identifier))))))))))))

================================================================================
Initializer list
================================================================================

void f() {
  int[] a = {1, 2, 3};
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (variable_declaration
        var_type: (type
          (datatype
            (primitive_type)))
        (variable_declarator
          name: (identifier)
          value: (initializer_list
            (number_literal)
            (number_literal)
            (number_literal)))))))

================================================================================
Nested initializer list
================================================================================

void f() {
  auto a = {{1, 2}, {3, 4}};
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (variable_declaration
        var_type: (type
          (datatype))
        (variable_declarator
          name: (identifier)
          value: (initializer_list
            (initializer_list
              (number_literal)
              (number_literal))
            (initializer_list
              (number_literal)
              (number_literal))))))))

================================================================================
Parenthesized expression
================================================================================

void f() {
  (a + b) * c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (parenthesized_expression
            (binary_expression
              left: (scoped_identifier
                (identifier))
              right: (scoped_identifier
                (identifier))))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Chained postfix operations
================================================================================

void f() {
  a.b[0](x).c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (member_expression
          object: (call_expression
            function: (index_expression
              object: (member_expression
                object: (scoped_identifier
                  (identifier))
                member: (identifier))
              index: (number_literal))
            arguments: (argument_list
              (scoped_identifier
                (identifier))))
          member: (identifier))))))

================================================================================
Assignment to member
================================================================================

void f() {
  a.b = c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (assignment_expression
          left: (member_expression
            object: (scoped_identifier
              (identifier))
            member: (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Logical operator precedence: and binds tighter than or
================================================================================

void f() {
  a or b and c;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (binary_expression
            left: (scoped_identifier
              (identifier))
            right: (scoped_identifier
              (identifier))))))))

================================================================================
Comparison operators
================================================================================

void f() {
  a == b;
  a != b;
  a < b;
  a > b;
  a <= b;
  a >= b;
}

--------------------------------------------------------------------------------

(script
  (func_declaration
    return_type: (type
      (datatype
        (primitive_type)))
    name: (identifier)
    parameters: (parameter_list)
    body: (statement_block
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier))))
      (expression_statement
        (binary_expression
          left: (scoped_identifier
            (identifier))
          right: (scoped_identifier
            (identifier)))))))

================================================================================
Number literals with base prefixes
================================================================================

void f() {
  0xFF;
  0o77;
  0b1010;
  0d42;
  3.14;
  1e10;
  2.5f;
}

--------------------------------------------------------------------------------
